cleanup bump version